# sdaps

./: .gitignore  .gitmodules  .packit.yaml  COPYING  MANIFEST.in  Makefile  NEWS  README  README.md  TODO  TROUBLESHOOTING  add.py  clifilter.py  cover.py  fabfile.py  ids.py  info.py  log.py  matrix.py  meson.build  meson_options.txt  script.py  sdaps.py  setup.cfg  setup.py  surface.py  template.py  update-translation  utils.py
boxgallery/: __init__.py  boxgallery.py  buddies.py
csvdata/: __init__.py  buddies.py  csvdata.py
custom-scripts/: README  sdaps-identify.py  sdaps-overlay.py  sdaps-recognize.py
debian/: changelog  control  copyright  rules  sdaps.docs
doc/: Einleitung
doc/sphinx/: Makefile  conf.py  make.bat  modules.rst  sdaps.add.rst  sdaps.annotate.rst  sdaps.boxgallery.rst  sdaps.cmdline.rst  sdaps.cover.rst  sdaps.csvdata.rst  sdaps.gui.rst  sdaps.ids.rst  sdaps.image.rst  sdaps.info.rst  sdaps.model.rst  sdaps.recognize.rst  sdaps.reorder.rst  sdaps.report.rst  sdaps.reporttex.rst  sdaps.rst  sdaps.setup.pdftools.rst  sdaps.setup.rst  sdaps.setuptex.rst  sdaps.stamp.rst  sdaps.utils.rst
examples/: .gitignore  example-2.tif  example.tex  example.tif
examples/coins/: COPYRIGHT
fedora/: Makefile  sdaps.spec
gui/: __init__.py  buddies.py  gui.py  main_window.glade  sheet_widget.py
image/: Makefile  image.c  image.h  wrap_image.c
model/: buddy.py  questionnaire.py  survey.py
packaging/: sdaps.spec
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  de.po  es.po  fi.po  fr.po  it.po  ja.po  ko.po  meson.build  missing  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sdaps.pot  si.po  sv.po  uk.po  zh_Hans.po
recognize/: __init__.py  buddies.py  recognize.py
report/: __init__.py  answers.py  buddies.py  flowables.py  report.py
sdaps/: __init__.py  add.py  barcode.py  calculate.py  clifilter.py  cover.py  defs.py  ids.py  info.py  log.py  matrix.py  paths.py  script.py  sdaps  surface.py  template.py  ugettext.py  utils.py
sdaps/add/: __init__.py
sdaps/annotate/: __init__.py  annotate.py  buddies.py
sdaps/boxgallery/: __init__.py  boxgallery.py  buddies.py
sdaps/cmdline/: __init__.py  add.py  annotate.py  boxgallery.py  convert.py  cover.py  csvdata.py  feather.py  gui.py  ids.py  info.py  recognize.py  reorder.py  report.py  reporttex.py  reset.py  setup.py  setuptex.py  stamp.py
sdaps/convert/: __init__.py
sdaps/cover/: __init__.py
sdaps/csvdata/: __init__.py  buddies.py  csvdata.py
sdaps/gamera/: convert.py  debug.py  test.py
sdaps/gui/: __init__.py  buddies.py  gui.py  main_window.glade  main_window.ui  sheet_widget.py  widget_buddies.py
sdaps/ids/: __init__.py
sdaps/image/: __init__.py  image.c  image.h  surface.c  surface.h  transform.c  transform.h  wrap_image.c
sdaps/info/: __init__.py
sdaps/model/: __init__.py  buddy.py  data.py  db.py  questionnaire.py  sheet.py  survey.py
sdaps/pandas/: __init__.py  buddies.py
sdaps/recognize/: __init__.py  blank.py  buddies.py  classic.py  code128.py  qrcode.py  recognize.py
sdaps/reorder/: __init__.py  reorder.py
sdaps/report/: __init__.py  answers.py  buddies.py  flowables.py  report.py
sdaps/reporttex/: __init__.py  buddies.py  report.py
sdaps/reset/: __init__.py
sdaps/setup/: __init__.py  additionalparser.py  boxesparser.py  buddies.py  metaparser.py  qobjectsparser.py  setup.py
sdaps/setup/pdftools/: __init__.py  pdfdefs.py  pdffile.py  pdfpath.py  pdftext.py
sdaps/setupodt/: __init__.py  boxesparser.py  metaparser.py  qobjectsparser.py
sdaps/setuptex/: __init__.py  boxesparser.py  create-latexmap.py  latexmap.py  sdapsfileparser.py  setup.py
sdaps/stamp/: __init__.py  generic.py  latex.py  stamp.py
sdaps/utils/: barcode.py  create-latexmap.py  exceptions.py  image.py  latex.py  latexmap.py  mimetype.py  opencv.py  paper.py  qrcode.py  ugettext.py
setup/: __init__.py  additionalparser.py  boxesparser.py  buddies.py  metaparser.py  qobjectsparser.py  setup.py
setup/pdftools/: __init__.py  pdfpath.py  pdftext.py
stamp/: __init__.py  stamp.py
test/: meson.build  run-test-locally.sh  run-test.sh
test/data/info_files/: test-odt  test-odt-lo35  test-tex-classic.2018-11-05  test-tex-classic.2019-01-13  test-tex-classic.2019-01-26  test-tex-ids  test-tex-ids.2  test-tex-ids.2018-11-05  test-tex-ids.2019-01-13  test-tex-ids.2019-01-26  test-tex-ids.2019-11-23  test-tex-ids.2020-01-19  test-tex-ids.texlive-20170808  test-tex-no-ids  test-tex-no-ids.2  test-tex-no-ids.2017  test-tex-no-ids.2017.20180305  test-tex-no-ids.2018-11-05  test-tex-no-ids.2019-01-13  test-tex-no-ids.2019-01-26  test-tex-no-ids.2019-11-23  test-tex-no-ids.3  test-tex-no-ids.fc27-5  test-tex-no-ids.texlive-20170123  test-tex-no-ids.texlive-20170808
test/data/odt/: debug.internetquestions  debug.odt  debug.tif
test/data/odt-5/: debug.odt  questionnaire_ids
test/data/tex/: code128_test_ids  ids_test_export.csv  ids_test_import.csv  questionnaire.tex  questionnaire_classic.tex  questionnaire_with_ids.tex  questionnaire_without_ids.tex  test_with_ids.tif
tex/: .gitignore  build.lua  code128.tex  meson.build  qrcode.py  qrcode.sty  qrcode.tex  sdaps-range.sty  sdaps.cls  sdapsreport.cls  tex_translations.in  translator-sdaps-dictionary-English.dict  translator-sdaps-dictionary-German.dict
tex/po/: POTFILES.in  de.po  es.po  fi.po  fr.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sv.po  uk.po  zh_Hans.po
