[metadata]
name = sdaps
# Version is defined indirectly
description = Scripts for data acquisition with paper-based surveys
url = http://sdaps.sipsolutions.net
author = Benjamin Berg, Christoph Simon
author_email = benjamin@sipsolutions.net, post@christoph-simon.eu
license = GPL-3
long_description = file:README.md
keywords = OMR,LaTeX,survey,questionnaire

[options]
zip_safe = False
include_package_data = False
packages = find:
build_requires =
	setuptools
	pkgconfig

[options.packages.find]
# Maybe move everything into a src subdirectory?
include = sdaps.*

